[gd_scene load_steps=21 format=2]

[ext_resource path="res://Fase/Ceu.png" type="Texture" id=1]
[ext_resource path="res://Fase/Terra.png" type="Texture" id=2]
[ext_resource path="res://Fase/Escudo01.png" type="Texture" id=3]
[ext_resource path="res://Fase/Escudo03.png" type="Texture" id=4]
[ext_resource path="res://Fase/Escudo04.png" type="Texture" id=5]
[ext_resource path="res://Fase/Escudo05.png" type="Texture" id=6]
[ext_resource path="res://Fase/Escudo02.png" type="Texture" id=7]
[ext_resource path="res://script_fase.gd" type="Script" id=8]
[ext_resource path="res://Recursos/Healthbar(2)/HP01.png" type="Texture" id=9]
[ext_resource path="res://cena_pause.tscn" type="PackedScene" id=10]
[ext_resource path="res://cena_personagem.tscn" type="PackedScene" id=11]
[ext_resource path="res://Recursos/Healthbar(2)/HP03.png" type="Texture" id=12]
[ext_resource path="res://Recursos/Healthbar(2)/HP00.png" type="Texture" id=13]
[ext_resource path="res://Recursos/Healthbar(2)/HP02.png" type="Texture" id=14]
[ext_resource path="res://Recursos/metal lord.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Recursos/Aces-High.wav" type="AudioStream" id=16]
[ext_resource path="res://Recursos/missil.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 603.983, 10 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 15 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 534.041, 40.946 )
scale = Vector2( 0.904989, 0.98661 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Terra" type="Area2D" parent="."]
process_priority = 1

[node name="escudo1" type="Sprite" parent="Terra"]
position = Vector2( 512, 248 )
scale = Vector2( 0.535, 0.532 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="escudo2" type="Sprite" parent="Terra"]
visible = false
position = Vector2( 512, 248 )
scale = Vector2( 0.535, 0.532 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="escudo3" type="Sprite" parent="Terra"]
visible = false
position = Vector2( 512, 248 )
scale = Vector2( 0.535, 0.532 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="escudo4" type="Sprite" parent="Terra"]
visible = false
position = Vector2( 512, 248 )
scale = Vector2( 0.535, 0.532 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="escudo5" type="Sprite" parent="Terra"]
visible = false
position = Vector2( 512, 248 )
scale = Vector2( 0.535, 0.532 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="Terra"]
position = Vector2( 512.593, 246.466 )
scale = Vector2( 0.534864, 0.532239 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Terra"]
visible = false
position = Vector2( 512.593, 246.466 )
scale = Vector2( 0.534864, 0.532239 )
polygon = PoolVector2Array( 229, 496.5, 229, 497.6, 457, 511.6, 457, 512.7, 609, 527.7, 609, 528.7, 753, 546.7, 753, 547.7, 959, 577.8, 959, 579.1, 960, 579.4, 960, 681.5, -960, 681.5, -960, 565.5, -950.3, 565.5, -619.1, 522.5, -610.2, 522.5, -415.1, 504.5, -395.1, 504.5, -181.1, 492.5, -132, 492.5, -63, 491.5, -63, 490.5 )

[node name="Pause" parent="." instance=ExtResource( 10 )]
visible = false
z_index = 5

[node name="TimerInimigo" type="Timer" parent="."]
wait_time = 1.3
autostart = true

[node name="TimerInimigo2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Node2D" parent="." instance=ExtResource( 11 )]
position = Vector2( 521.587, 514.151 )

[node name="limiteDisparo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="limiteDisparo"]
position = Vector2( 507.481, -46.9093 )
shape = SubResource( 1 )

[node name="limiteDisparoInimigo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="limiteDisparoInimigo"]
position = Vector2( 504.823, 630.683 )
shape = SubResource( 1 )

[node name="BarraVida" type="Node2D" parent="."]
z_index = 1

[node name="vida1" type="Sprite" parent="BarraVida"]
position = Vector2( 109.479, 32.5053 )
scale = Vector2( 0.682161, 0.768242 )
texture = ExtResource( 13 )

[node name="vida2" type="Sprite" parent="BarraVida"]
visible = false
position = Vector2( 109.623, 32.2821 )
scale = Vector2( 0.682161, 0.768242 )
texture = ExtResource( 9 )

[node name="vida3" type="Sprite" parent="BarraVida"]
visible = false
position = Vector2( 109.434, 31.9095 )
scale = Vector2( 0.682161, 0.768242 )
texture = ExtResource( 14 )

[node name="vida4" type="Sprite" parent="BarraVida"]
visible = false
position = Vector2( 109.753, 31.3494 )
scale = Vector2( 0.682161, 0.768242 )
texture = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="BarraVida"]
position = Vector2( 238.648, 33.3495 )
rotation = 0.00410252
scale = Vector2( 0.114492, 0.114492 )
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="BarraVida"]
margin_left = 249.609
margin_top = 16.2635
margin_right = 296.609
margin_bottom = 55.2635
custom_fonts/font = SubResource( 2 )
text = "x 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerBoss" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerAjuda" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="Pontuacao" type="Node2D" parent="."]
z_index = 1

[node name="pontuacao" type="Label" parent="Pontuacao"]
margin_left = 692.38
margin_top = 2.34315
margin_right = 921.38
margin_bottom = 41.3432
custom_fonts/font = SubResource( 3 )
text = "Pontuação: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Terra" to="." method="_on_Terra_area_entered"]
[connection signal="timeout" from="TimerInimigo" to="." method="_on_TimerInimigo_timeout"]
[connection signal="timeout" from="TimerInimigo2" to="." method="_on_TimerInimigo2_timeout"]
[connection signal="area_entered" from="limiteDisparo" to="." method="_on_limiteDisparo_area_entered"]
[connection signal="area_entered" from="limiteDisparoInimigo" to="." method="_on_limiteDisparoInimigo_area_entered"]
[connection signal="timeout" from="TimerBoss" to="." method="_on_TimerBoss_timeout"]
[connection signal="timeout" from="TimerAjuda" to="." method="_on_TimerAjuda_timeout"]
